fixed svgs, fixed menu visibility in mobile

--- a/src/styles/_burger-menu.scss
+++ b/src/styles/_burger-menu.scss
@@ -10,7 +10,7 @@
   background: rgba(23, 61, 51, 0.25);
 
   backdrop-filter: blur(2px);
-  visibility: hidden;
+  // visibility: hidden;
 }
 
 .container.mobile-burger-menu-container {
